Updated code in util

--- a/util/conf.yaml
+++ b/util/conf.yaml
@@ -1,27 +1,27 @@
 runtype: "full_model"  # Type of run
 
 # Normal Pop
-initSize: 100000  # Initial size
-birth_rate: 0.05548397814  # Birth rate
-death_rate: 0.04  # Death rate
+initSize: 1000000  # Initial size
+birth_rate: 0.034  # Birth rate
+death_rate: 0.01  # Death rate
 mut_rate: 36.0  # Mutation rate
 adv_mut_rate: 0.0  # Advantageous mutation rate
 s_coef: 0.0  # Selection coefficient
 
 # Polyp Pop
 num_seeds: 1  # Number of seeds
-final_pop_size: 10000  # Final population size
+final_pop_size: 1000000  # Final population size
 s_coef_polyp: 0.0  # Selection coefficient for polyp
-adv_mut_rate_polyp: 0.0  # Advantageous mutation rate for polyp
-polyp_birth_rate: 0.9  # Birth rate for polyp
-polyp_death_rate: 0.05 # Polyp death rate
+adv_mut_rate_polyp: 0.0  # 0.02 Advantageous mutation rate for polyp
+polyp_birth_rate: 0.34  # Birth rate for polyp
+polyp_death_rate: 0.01 # Polyp death rate
 mut_rate_polyp: 36.0  # Mutation rate for polyp
-polyp_init_time: 10 # Polyp initiation time
+polyp_init_time: 20 # Polyp initiation time
 
 # IO and Options
 outfile: "/home/rschenck/oak_dir/cluster/outputs/test_cpb/"  # Output dir
 seed: 42  # Random seed for simulations
-max_t: 10  # Maximum time
+max_t: 80  # Maximum time
 verbose: 0  # Verbose output
 mean_depth: 100  # Mean sequencing depth
 sd_depth: 10  # Standard deviation of sequencing depth
