--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-h5py==3.11.0
-matplotlib==3.7.1
-numpy==1.24.2
-pandas==1.5.3
-pyabc==0.12.13
-PyYAML==6.0.1
-scikit_learn==1.4.2
-scipy==1.13.1
-seaborn==0.13.2
-statsmodels==0.14.2
+h5py
+matplotlib
+numpy
+pandas
+pyabc
+PyYAML
+scikit_learn
+scipy
+seaborn
+statsmodels
