Updated tracking of induction times. Looks to still be off by 6 months in the polyp, but otherwise working as expected

--- a/util/conf.yaml
+++ b/util/conf.yaml
@@ -24,5 +24,6 @@ seed: 42  # Random seed for simulations
 max_t: 80  # Maximum time
 verbose: 0  # Verbose output
 mean_depth: 100  # Mean sequencing depth
-sd_depth: 10  # Standard deviation of sequencing depth
-sample_size: 10000  # Sample size of cells to take
+sd_depth: 5  # Standard deviation of sequencing depth
+sample_size: 25000  # Sample size of cells to take
+runexpandmuts: False
