make `runexpandmuts` do things

--- a/util/conf.yaml
+++ b/util/conf.yaml
@@ -26,5 +26,5 @@ verbose: 0  # Verbose output
 mean_depth: 100  # Mean sequencing depth
 sd_depth: 10  # Standard deviation of sequencing depth
 sample_size: 10000  # Sample size of cells to take
-runexpandmuts: False
+runexpandmuts: 0
 purity: 1.0
